--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.0",
     "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "^2.17.1",
+    "react-native": "^0.74.2",
+    "react-native-gesture-handler": "^2.18.1",
+    "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,7 +28,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.84",
     "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
+    "@react-native/metro-config": "^0.74.84",
     "@react-native/typescript-config": "0.74.84",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
